[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/PackedScenes/GameUi/GameUi.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/PackedScenes/Actors/PlayerHands/PlayerHands.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/PackedScenes/InteractionArea/InteractionArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/PackedScenes/Camera/PlayerCamera/PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://Assets/PackedScenes/GameUi/IngredientUi.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Sounds/Ask0.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/GiveCocktail0.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/LoseMoney0.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/RecieveMoney0.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/Select0.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/TakeMoney0.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Stop"

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Arm:translation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0.0766696, 0.0756377, -0.0231964, -0.0775359, -0.25, 0, 0.25, 0, 0.078, -0.25, 0, 0.25, 0, 0, -0.087447, 0.0249743, 0.25, -0.0713984 ),
"times": PoolRealArray( 0, 0.6, 1.6, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Arm:translation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, -0.000524608, 0.151275, 0.000317441, 0.0352207, -0.137919, -0.000318359, 0.159229, 0.000367548, -0.0358476, -0.25, 0, 0.25, 0, 0.035, -0.208656, 0.00120329, 0.174935, -0.00100883, -0.036, -0.206105, -0.00117952, 0.182888, 0.00104665, 0, -0.217112, 0.00266883, 0.25, -0.00307311 ),
"times": PoolRealArray( 0, 0.3, 0.6, 1.3, 1.6, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Arm:translation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.6, 1.3, 1.6, 2 )
}

[sub_resource type="CapsuleShape" id=3]
radius = 0.3
height = 0.5

[sub_resource type="BoxShape" id=4]
extents = Vector3( 5, 0.3, 0.3 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 8, 0.1, 10 )

[node name="PlayerCamera" type="Spatial"]
script = ExtResource( 4 )

[node name="Arm" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Arm"]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, 0, 0, 0 )

[node name="GameUi" parent="Arm/Camera" instance=ExtResource( 1 )]
font_color = Color( 1, 1, 1, 1 )

[node name="IngredientUi" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0.95 )
visible = false

[node name="PlayerHands" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0.9 )

[node name="InteractionArea" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 1.1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Stop = SubResource( 1 )
anims/Waiting = SubResource( 2 )

[node name="MeetingArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.84681 )
collision_layer = 32
collision_mask = 8

[node name="MeetingPlace" type="CollisionShape" parent="MeetingArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -0.5, 0 )
shape = SubResource( 3 )

[node name="MeetingQueue" type="CollisionShape" parent="MeetingArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, -0.7, 0 )
shape = SubResource( 4 )

[node name="WalkingArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="WalkingArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, -0.7, 13 )
shape = SubResource( 5 )

[node name="CollisionShape2" type="CollisionShape" parent="WalkingArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, -0.7, 13 )
shape = SubResource( 5 )

[node name="Sounds" type="Node" parent="."]

[node name="Ask" type="AudioStreamPlayer3D" parent="Sounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.552263 )
stream = ExtResource( 6 )

[node name="GiveCocktail" type="AudioStreamPlayer3D" parent="Sounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.552263 )
stream = ExtResource( 7 )

[node name="LoseMoney" type="AudioStreamPlayer3D" parent="Sounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.552263 )
stream = ExtResource( 8 )

[node name="RecieveMoney" type="AudioStreamPlayer3D" parent="Sounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.552263 )
stream = ExtResource( 9 )

[node name="Select" type="AudioStreamPlayer3D" parent="Sounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.552263 )
stream = ExtResource( 10 )

[node name="TakeMoney" type="AudioStreamPlayer3D" parent="Sounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.552263 )
stream = ExtResource( 11 )

[editable path="InteractionArea"]
